[package]
name = "json_env_logger2"
version = "0.2.1"
authors = ["zdannar@gmail.com", "softprops <d.tangren@gmail.com>"]
edition = "2021"
description = "A structured JSON logger for Rust, original project by softprops was abandonded."
documentation = "https://docs.rs/json_env_logger2/"
homepage = "https://github.com/zdannar/json-env-logger"
repository = "https://github.com/zdannar/json-env-logger"
keywords = ["json", "log"]
license = "MIT"
categories = ["development-tools::debugging"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv-log-macro = "1.0"
backtrace = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }
env_logger = { version = "0.9", default_features = false }
log = { version = "0.4", features = ["kv_unstable", "std"]  }
serde_json = "1.0"

[features]
default = []
iso-timestamps = ["chrono"]
